<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isSaved"
            type="Boolean" />
        <variable
            name="isConnected"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Add_Info_Fragment"
        android:background="#EDEDED">
        <RelativeLayout
            android:id="@+id/rel_connection_err"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F61919"
            android:visibility="@{isConnected? View.GONE : View.VISIBLE,default = gone}">

            <TextView
                android:id="@+id/txt_network_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Internet Connection , Please check it!!"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rek_settings_back">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rel_back">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_settings"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azan_voice_name"
                        android:textSize="18sp"
                        android:textColor="@color/rel_back"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azan_voice"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#B2B2B2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_way_name"
                        android:textSize="18sp"
                        android:textColor="@color/rel_back"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_way"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#B2B2B2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <Spinner
                        android:id="@+id/spin_select_way"
                        android:layout_width="220dp"
                        android:layout_height="40dp"
                        android:autofillHints="Your place"
                        android:isScrollContainer="true"
                        tools:ignore="RtlCompat,UnusedAttribute"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/azan_determination_way"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#B2B2B2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rek_settings_back"
                android:layout_marginTop="40dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/rel_back">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_settings"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <Spinner
                        android:id="@+id/spin_select_country"
                        android:layout_width="220dp"
                        android:layout_height="40dp"
                        android:autofillHints="Your place"
                        android:isScrollContainer="true"
                        tools:ignore="RtlCompat,UnusedAttribute"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_country"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#B2B2B2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <Spinner
                        android:id="@+id/spin_select_city"
                        android:layout_width="220dp"
                        android:layout_height="40dp"
                        android:autofillHints="Your place"
                        android:isScrollContainer="true"
                        tools:ignore="RtlCompat,UnusedAttribute"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_city"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_btn"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/rel_back"
            android:elevation="8dp"/>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="@{isSaved? View.VISIBLE : View.GONE , default = gone}"
            />
    </RelativeLayout>
</layout>